<resources>
    <string name="app_name">Anota Imoveis</string>
    <string name="title_activity_show_addresses">Mapa</string>
    <string name="telefone">Telefone</string>
    <string name="tipo">Tipo</string>
    <string name="casa">Casa</string>
    <string name="apartamento">Apartamento</string>
    <string name="loja">Loja</string>
    <string name="tamanho">Tamanho</string>
    <string name="pequeno">Pequeno</string>
    <string name="medio">Medio</string>
    <string name="grande">Grande</string>
    <string name="em_constru_o">Em construção</string>
    <string name="pronto">Anotar</string>
    <string name="novo">Novo</string>
    <string name="visualizar">Minha lista</string>
    <string name="mapa">Mapa</string>
    <string name="gravar">Gravar</string>
    <string name="emConstrucao">Em construção</string>
    <string name="info_salva">Informação salva</string>
    <string name="falta_param">8 digitos para o numero e marcar as duas primeiras opções</string>
    <string name="tirar_foto">Tirar foto?</string>
    <string name="Sim">Sim</string>
    <string name="Nao">Não</string>
    <string name="loc_indisponivel">Localização não disponivel</string>
    <string name="imovel_apagado">Imovel apagado</string>
    <string name="imov_contato">"Imovel contato: "</string>
    <string name="imov_save">Imoveis salvos</string>
    <string name="nao_imov_sav">Não existe imoveis na sua lista</string>
</resources>